# inference

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: _ci-checks.yml  ci.yml  mirror-deploy-state.yml  publish-images.yml
contracts/: inferred_event.schema.json
dashboard/: .dockerignore  Dockerfile  README.md  app.py  build_preview.py  index.html  logical_levels.json  requirements.txt
dashboard/web/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/web/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts  view.ts
dashboard/web/src/app/: App.tsx  DataProvider.tsx  (+3 more)
deploy/argocd/: application-car-door-opened.yml  application-dashboard.yml  application-home-arrival.yml  application-runtime.yml  application-vector.yml
deploy/kustomize/base/: kafka-ssl-credentials.yml  kustomization.yml
doc/: architecture.md  classes.md  invariants.md  vector-pipeline.md
doc/adr/: 0001-message-shaping-pipeline.md  0002-recursive-derivation.md  0003-dynamic-event-runtime.md  0004-scaling-model.md  0005-session-gated-derivation.md  0006-car-native-trip-signals.md
events/: arrived_home_by_car.yml  car_door_closed.yml  car_door_opened.yml  car_trip.yml  got_into_the_car.yml  got_out_the_car.yml  gym_visit.yml  left_home_by_car.yml  phone_is_charging.yml
scripts/: emit-charging.sh  emit.sh  emit_event_schema.py
src/inference/: capabilities.py  config.py  event.py  utils.py
src/inference/engines/: __init__.py  base.py  decaying_window.py  geofence.py  naive_bayes_window.py  protocol.py  session_gated_window.py  session_window.py  weighted_window.py
src/inference/events/: __init__.py  envelope.py  messages.py
src/inference/observers/: logging_observer.py  protocol.py
src/inference/pipeline/: __init__.py  draft.py  protocol.py  runner.py
src/inference/runtime/: __init__.py  builder.py  config.py  core.py  definition.py  quix.py  regions.py  registry.py  supervisor.py
src/inference/transport/: kafka_handler.py  protocol.py  vector_http_emitter.py
tests/: conftest.py  test_capabilities.py  test_core.py  test_definition.py  test_engines.py  test_event.py
workers/bmw-cardata/: Dockerfile  README.md  main.py  requirements.txt
workers/bmw-cardata/bmw_cardata/: __init__.py  auth.py  config.py  ingest.py  mapper.py  mqtt_client.py  token_store.py
workers/car_door_opened/: Dockerfile  main.py
workers/home_arrival/: Dockerfile  main.py
workers/quix_spike/: .gitignore  README.md  main.py  runtime.py
workers/runtime/: Dockerfile  main.py  quix_main.py
(+56 files in other folders)
