[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inference"
authors = [
    {name = "Rosario Di Sommma", email = "rosario.disomma@dreamhost.com"},
]
description = "Event Inference Base Worker Classes"
readme = "README.md"
version = "0.0.0"
requires-python = ">=3.13"
license = {text = "Apache Software License 2.0"}
dependencies = [
    "confluent-kafka",
    "pydantic>=2.6",
    "redis",
    "python-dotenv",
    "pyyaml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/inference"]

[project.optional-dependencies]
dev = []
# Spike-only: the Quix Streams data-plane exploration (workers/quix_spike/).
# Kept out of the runtime image deps until the migration is real (ADR 0004).
quix = ["quixstreams>=3.0"]

[tool.ruff]
line-length = 100
respect-gitignore = true
