[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inference"
authors = [
    {name = "Rosario Di Sommma", email = "rosario.disomma@dreamhost.com"},
]
description = "Event Inference Base Worker Classes"
readme = "README.md"
version = "0.0.0"
requires-python = ">=3.13"
license = {text = "Apache Software License 2.0"}
dependencies = [
    "quixstreams>=3.24,<4",   # the runtime data plane (ADR 0004); bundles confluent-kafka
    "pydantic>=2.6",
    "python-dotenv",
    "pyyaml",
    "psycopg[binary]>=3.1",   # runtime reads geofence regions from Neon (adapter-only; imported lazily)
]

[tool.hatch.build.targets.wheel]
packages = ["src/inference"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
respect-gitignore = true
